fixed left aligned right div

--- a/app/assets/stylesheets/atlas-map.scss
+++ b/app/assets/stylesheets/atlas-map.scss
@@ -107,6 +107,10 @@ button:focus {
   margin: 0px;
 }
 
+.destination-list {
+  text-align: left;
+}
+
 .info-div h4 {
   margin-bottom: 0px;
 }
